--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/estilo.css" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="shortcut icon" href="img/rocket_icon-icons.com_54375.ico" />
+    <link rel="shortcut icon" href="img/rocket.ico" />
     <title>ACME</title>
 </head>
 <body>
-    <header class="header">
-        <a href="index.html"><h1 class="logo"></h1></a>
-        <div class="header-list">
-            <ul class="header-list-itens">
-                <li class="header-list-portifolio"><a href="#">Portifolio</a></li>
-                <li class="header-list-team"><a href="#">team</a></li>
-                <li class="header-list-contact"><a href="#">contact</a></li>
-                <li class="header-list-login"><a href="#"></a>login</li>
-            </ul>
-        </div>
-    </header>
-
+    <div class="header">
+        <div class="logo"><a href="index.html"><img src="img/logo-acme.png"/></a></div>      
+        <ul class="header-list-itens">
+            <li class="header-list"><a href="#">PORTIFOLIO</a></li>
+            <li class="header-list"><a href="#">TEAM</a></li>
+            <li class="header-list"><a href="#">CONTACT</a></li>
+            <li class="header-list" id="icon"><a href="#"><img src="img/user.png"/></a></li>
+        </ul>        
+    </div>
     <section class="section-input">
         <div>
             
@@ -28,8 +25,8 @@
         <h1 class="section-input-title">Buscar Vagas</h1> 
         <form action=" " method="post">
             <div class="container-section-input">  
-                <input type="search" id="search1" name="q">
-                <button type="submit-section-input">Buscar</button>
+                <input class="section-input-input" type="search" name=" " >
+                <a class="button-section-input" type="submit-section-input">Buscar</a>
             </div>
         </form>     
     </section>
@@ -38,31 +35,31 @@
                     <div class="container-contrato">
                         <h3 class="title-filtro">Filtros</h3>
                         <h3 class="title-contrato">Tipo de Contrato</h3>
-                        <ul class="section-form-list">
-                            <button class="button-list">CLT</button>
-                            <button class="button-list">PJ</button>
-                            <button class="button-list">STAG</button>
+                        <ul class="section-form-list-filtro">
+                            <a class="button-list" href="#">CLT</a>
+                            <a class="button-list" href="#">PJ</a>
+                            <a class="button-list" href="#">STAG</a>
                         </ul>
                     </div>
                     <div class="container-nivel">
                         <h3 class="title-contrato">Nível</h3>
-                        <ul class="section-form-list">
-                            <button class="button-list">Júnior</button>
-                            <button class="button-list">Pleno</button>
-                            <button class="button-list">Sênior</button>
+                        <ul class="section-form-list-filtro">
+                            <a class="button-list" href="#">Júnior</a>
+                            <a class="button-list" href="#">Pleno</a>
+                            <a class="button-list" href="#">Sênior</a>
                         </ul>
                     </div>
                     <div class="container-input">
                         <form action=" " method="post">
                             <div class="container-input-form">  
-                                <input type="search" id="search1" name="q">
-                                <button type="submit">Buscar</button>
+                                <input type="search" class="search" name=" ">
+                                <a class="button-list" href="#" type="submit">Buscar</a>
                             </div>
                         </form>
                           <form action=" " method="post">
                             <div class="container-input-form">  
-                                <input type="search" id="search2" name="q">
-                                <button type="submit">Buscar</button>
+                                <input type="search" class="search" name=" ">
+                                <a class="button-list" href="#" type="submit">Buscar</a>
                             </div>
                         </form>
                     </div>
@@ -98,15 +95,15 @@
                 </div>
     </section>
 
-    <footer>
+    <div class="footer">
         <ul class="footer-list">
-            <li class="li-facebook"></li>
-            <li class="li-twitter"></li>
-            <li class="li-instagram"></li>
+            <li class="li-facebook"><img width="35px" height="35px" src="/img/Facebook.png"/></li>
+            <li class="li-twitter"><img width="35px" height="35px" src="/img/Twitter.png"/></li>
+            <li class="li-instagram"><img width="35px" height="35px" src="/img/Instagram.png"/></li>
         </ul>
         <div class="logo-footer">
-            <img src="#" />
+            <img id="img-footer" src="img/logo-acme.png" width="120px" height="50px"/>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
